# SifroHaluzic

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cz/civilizacehra/sifrohaluzic/: ApplicationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: en.canon  map_brno.sifrohal  map_matrix.sifrohal  map_prague.sifrohal  podst_jm_cz.canon
app/src/main/cpp/: MrizkoDrtic.cpp  MrizkoDrtic.h  Trie.cpp  Trie.h  drtic-lib.cpp
app/src/main/java/cz/civilizacehra/sifrohaluzic/: DebaseatorActivity.java  DebinarizatorActivity.java  DeternarizatorActivity.java  Dictionary.java  MainActivity.java  MapDictionary.java  MrizkoDrticActivity.java  PresmyslovnikActivity.java  PrincipReaderActivity.java  PrincipTrainerActivity.java  StringPair.java  TrieMap.java
app/src/main/res/layout/: activity_debinarizator.xml  activity_deternarizator.xml  activity_main.xml  activity_mrizko_drtic.xml  activity_presmyslovnik.xml  activity_princip_reader.xml  activity_princip_trainer.xml  binaryrow.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/cz/civilizacehra/sifrohaluzic/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
